dark mode issue solved

--- a/my_portfolio/src/style/About.css
+++ b/my_portfolio/src/style/About.css
@@ -84,7 +84,7 @@
 }
 @media screen and (min-width: 800px) {
   .about{
-    margin-top: -300px;
+    /* margin-top: 300px; */
     margin-bottom: 0;
   }
   .title{
