--- a/my_portfolio/src/style/Footer.css
+++ b/my_portfolio/src/style/Footer.css
@@ -41,7 +41,7 @@
 
 .menu__link {
   font-size: 1.2rem;
-  color: #fff;
+  color: #fff!important;
   margin: 0 40px;
   display: inline-block;
   transition: 0.5s;
